fix overflow for body when mobile menu isopen

--- a/css/main.css
+++ b/css/main.css
@@ -293,6 +293,12 @@ body.modal-open {
   overflow: hidden;
 }
 
+@media (max-width: 767.98px) {
+  body.lock {
+    overflow: hidden;
+  }
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
