--- a/sass/base/_commons.scss
+++ b/sass/base/_commons.scss
@@ -8,6 +8,12 @@ body.modal-open {
     overflow: hidden;
 }
 
+@include mq(mobile-only) {
+    body.lock {
+        overflow: hidden;
+    }
+}
+
 .section {
     padding-top: 60px;
     padding-bottom: 60px;
